@@ -1,5 +1,8 @@
 Version 1.3:
 
+(2012-11-09)
+ * Remember position and size.
+
 (2012-10-11)
  * Show a tooltip with the title of the video.
 
